# libOTe

./: .gitignore  CMakeLists.txt  README.md
KyberOT/: CMakeLists.txt  KyberOT.h  api.h  cbd.h  fips202.h  fips202x4.h  genmatrix.h  indcpa.h  kex.h  ntt.h  params.h  poly.h  polyvec.h  randombytes.h  rng.h  verify.h
KyberOT/keccak4x/: KeccakP-1600-times4-SnP.h
SimplestOT/: CMakeLists.txt
frontend/: main.cpp  util.cpp  util.h
libOTe/: CMakeLists.txt  config.h  version.h
libOTe/Base/: BaseOT.h  MasnyRindal.cpp  MasnyRindal.h  MasnyRindalKyber.cpp  MasnyRindalKyber.h  SimplestOT.cpp  SimplestOT.h  naor-pinkas.cpp  naor-pinkas.h
libOTe/DPF/: BgicksPprf.h
libOTe/JNI/: WedprKkrtInterface.cpp  WedprKkrtInterface.h  com_webank_wedpr_ot_kkrt_NativeInterface.h  test.cpp  test.h
libOTe/NChooseK/: AknOtReceiver.cpp  AknOtReceiver.h  AknOtSender.cpp  AknOtSender.h
libOTe/NChooseOne/: NcoOtExt.cpp  NcoOtExt.h
libOTe/NChooseOne/Kkrt/: KkrtDefines.h  KkrtNcoOtReceiver.cpp  KkrtNcoOtReceiver.h  KkrtNcoOtSender.cpp  KkrtNcoOtSender.h  WedprKkrtReceiver.cpp  WedprKkrtReceiver.h  WedprKkrtSender.cpp  WedprKkrtSender.h
libOTe/NChooseOne/Oos/: OosDefines.h  OosNcoOtReceiver.cpp  OosNcoOtReceiver.h  OosNcoOtSender.cpp  OosNcoOtSender.h
libOTe/NChooseOne/RR17/: Rr17NcoOtReceiver.cpp  Rr17NcoOtReceiver.h  Rr17NcoOtSender.cpp  Rr17NcoOtSender.h
libOTe/Tools/: LinearCode.cpp  LinearCode.h  SilentPprf.cpp  SilentPprf.h  Tools.cpp  Tools.h  bch511.h  bitpolymul.cpp  bitpolymul.h
libOTe/Tools/bitpolymul/: bc.cpp  bc.h  bc_to_gen_code.h  bc_to_lch_gen_code.cpp  bc_to_mono_gen_code.cpp  bitmat_prod.h  bpmDefines.h  btfy.cpp  btfy.h  encode.cpp  encode.h  gf2128_cantor_iso.h  gf264_cantor_iso.h  gfext_aesni.h  ska.h  transpose.h  transpose_bit.h  trunc_btfy_tab.h  trunc_btfy_tab_64.h
libOTe/TwoChooseOne/: IknpDotExtReceiver.cpp  IknpDotExtReceiver.h  IknpDotExtSender.cpp  IknpDotExtSender.h  IknpOtExtReceiver.cpp  IknpOtExtReceiver.h  IknpOtExtSender.cpp  IknpOtExtSender.h  KosDotExtReceiver.cpp  KosDotExtReceiver.h  KosDotExtSender.cpp  KosDotExtSender.h  KosOtExtReceiver.cpp  KosOtExtReceiver.h  KosOtExtSender.cpp  KosOtExtSender.h  OTExtInterface.cpp  OTExtInterface.h  SilentOtExtReceiver.cpp  SilentOtExtReceiver.h  SilentOtExtSender.cpp  SilentOtExtSender.h  TcoOtDefines.h
libOTe_Tests/: AknOt_Tests.cpp  AknOt_Tests.h  CMakeLists.txt  Common.cpp  Common.h  NcoOT_Tests.cpp  NcoOT_Tests.h  OT_Tests.cpp  SilentOT_Tests.cpp  UnitTests.cpp  UnitTests.h
libOTe_Tests/testData/: code128_BCH511.h  code384_BCH511.h
